<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>jp.chakra.lotus</groupId>
    <artifactId>lotus-worksap-cms</artifactId>
    <packaging>jar</packaging>
    <version>2.0-SNAPSHOT</version>
    <name>lotus-worksap-cms</name>
    <url>http://maven.apache.org</url>

    <!--
    <organization>
        <name>Connecty Lotus Project</name>
        <url>http://www.chakra.jp/</url>
    </organization>
    <distributionManagement>
        <repository>
            <uniqueVersion>false</uniqueVersion>
            <id>maven.chakra.jp</id>
            <name>Connecty Maven2 Repository</name>
            <url>scp://www.chakra.jp/home/www/maven2</url>
        </repository>
        <snapshotRepository>
            <uniqueVersion>true</uniqueVersion>
            <id>maven-snapshot.chakra.jp</id>
            <name>Connecty Maven2 Snapshot Repository</name>
            <url>scp://www.chakra.jp/home/www/maven2-snapshot</url>
        </snapshotRepository>
    </distributionManagement>
    -->


    <dependencies>
        <dependency>
            <groupId>org.clojure</groupId>
            <artifactId>clojure</artifactId>
            <version>1.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.clojure</groupId>
            <artifactId>clojure-contrib</artifactId>
            <version>1.2.0</version>
        </dependency>
        <dependency>
            <groupId>enlive</groupId>
            <artifactId>enlive</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>compojure</groupId>
            <artifactId>compojure</artifactId>
            <version>0.5.3</version>
        </dependency>
        <dependency>
            <groupId>ring</groupId>
            <artifactId>ring-core</artifactId>
            <version>0.3.4</version>
        </dependency>
        <dependency>
            <groupId>ring</groupId>
            <artifactId>ring-servlet</artifactId>
            <version>0.3.5</version>
        </dependency>
        <dependency>
            <groupId>ring</groupId>
            <artifactId>ring-jetty-adapter</artifactId>
            <version>0.3.4</version>
        </dependency>
        <dependency>
            <groupId>hiccup</groupId>
            <artifactId>hiccup</artifactId>
            <version>0.3.1</version>
        </dependency>
        <dependency>
            <groupId>sandbar</groupId>
            <artifactId>sandbar</artifactId>
            <version>0.3.0</version>
        </dependency>
        <dependency>
            <groupId>postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>8.4-702.jdbc4</version>
        </dependency>
        <dependency>
            <groupId>postgres-pool</groupId>
            <artifactId>postgres-pool</artifactId>
            <version>1.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.mortbay.jetty</groupId>
            <artifactId>jetty</artifactId>
            <version>${jetty.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.tmatesoft.svnkit</groupId>
            <artifactId>svnkit</artifactId>
            <version>${svnkit.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>lotus-scm</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>clojure.org</id>
            <url>http://build.clojure.org/releases</url>
        </repository>
        <repository>
            <id>clojars</id>
            <url>http://clojars.org/repo</url>
        </repository>
        <repository>
            <id>java.net</id>
            <url>http://download.java.net/maven/2</url>
        </repository>
        <repository>
            <id>maven.chakra.jp</id>
            <url>http://www.chakra.jp/maven2</url>
        </repository>
        <repository>
            <id>maven-snapshot.chakra.jp</id>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <url>http://www.chakra.jp/maven2-snapshot</url>
        </repository>
    </repositories>

    <!--
    <pluginRepositories>
        <pluginRepository>
            <name>oss.sonatype.org - github-releases</name>
            <id>oss.sonatype.org-github-releases</id>
            <url>http://oss.sonatype.org/content/repositories/github-releases</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
        <pluginRepository>
            <id>docbkx.snapshots</id>
            <name>Maven Plugin Snapshots</name>
            <url>http://docbkx-tools.sourceforge.net/repository/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>
-->
     
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <encoding>UTF-8</encoding>
                    <optimize>true</optimize>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>jp.chakra.lotus.ecintegration.controller</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.theoryinpractise</groupId>
                <artifactId>clojure-maven-plugin</artifactId>
                <version>1.3.6</version>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>test-clojure</id>
                        <phase>test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <script>src/main/clojure/jp/chakra/lotus/ecintegration/controller.clj</script>
                    <sourceDirectories>
                        <sourceDirectory>src/main/clojure</sourceDirectory>
                    </sourceDirectories>
                    <testSourceDirectories>
                        <testSourceDirectory>src/test/clojure</testSourceDirectory>
                    </testSourceDirectories>
                    <clojureOptions>-server -Xmx128m -Dfile.encoding=UTF-8 -XX:PermSize=128m</clojureOptions>
                </configuration>
            </plugin>
        </plugins>
        <finalName>lotus-ec-integration</finalName>
    </build>

    <properties>
        <jetty.version>6.1.26</jetty.version>
        <env.jetty.contextPath>/</env.jetty.contextPath>
        <svnkit.version>1.3.5</svnkit.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
        <m2.home>-- this property automatically resolved --</m2.home>
    </properties>    
    
</project>